--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="audio.html"></a>
-    <a href="icons.html"></a>
-    <a href="iframe.html"></a>
-    <a href="pdf.html"></a>
-    <a href="video.html"></a>
-    <a href="ejercicio1.html"></a>
+    <a href="audio.html">audio</a>
+    <a href="icons.html">icons</a>
+    <a href="iframe.html">iframe</a>
+    <a href="pdf.html">pdf</a>
+    <a href="video.html">video</a>
+    <a href="ejercicio1.html">ejercicio 1</a>
 </body>
 </html>
